[metadata]
name = mininet-topology
version = 1.0
summary = Mininet utility to create topologies based on YAML files
description-file = README.rst
author = Brocade NetDev Team
author-email = jcastrog@brocade.com
home-page = http://www.brocade.com/
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    docopt
    mntopo
    fmtester
    traffic

extra_files =
    setup.py
    README.rst
    mnyml
    mntest
    mnsend
    mnrecv
    topodc
    toptb

[global]


[entry-points]
console_scripts =
    mnyml = mntopo.shell:main
    mntest = mntopo.checkershell:main
    mnsend = traffic.send:main
    mnrecv = traffic.receive:main
    topodc = mntopo.topodatacenter:main
    topotb = mntopo.topotable:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
